# clangd_modules_bug_showcase

./: .gitmodules  CMakeLists.txt  ProxyModule.cmake  README.md  main.cpp  my_app.cpp  proxy.cpp  unique_fd.cpp  unique_wrapper.cpp
